modificacion a la rama main

--- a/curso-frontend-developer/iniciar-sesion/iniciar-sesion.html
+++ b/curso-frontend-developer/iniciar-sesion/iniciar-sesion.html
@@ -12,6 +12,7 @@
   <title>Inicia Sesión</title>
 </head>
 <body>
+  <p>Modificated</p>
   <header class="header">
     <img class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="Platzi Video">
   </header>
